...

const META: Record<
  string,
  { label: string; icon: IconName; iconActive: IconName; center?: boolean }
> = {
  Home: { label: "Ana Sayfa", icon: "home-outline", iconActive: "home" },
  Appointments: { label: "Randevular", icon: "calendar-outline", iconActive: "calendar" },
  Search: { label: "", icon: "scan-outline", iconActive: "scan", center: true },
  Notifications: {
    label: "Bildirimler",
    icon: "notifications-outline",
    iconActive: "notifications",
  },
...
